[package]
name = "aa-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tokio async runtime wrapper and lifecycle management for Agent Assembly"

[features]
default = []
# Enables integration tests that exercise both proxy and eBPF layers together.
# Requires Linux + root (CAP_BPF + CAP_PERFMON). Not included in default features.
# Usage: sudo cargo test -p aa-runtime --features integration-test --test layer_integration
integration-test = []

[dependencies]
aa-core                     = { path = "../aa-core" }
aa-proto                    = { path = "../aa-proto" }
axum                        = "0.8"
bitflags                    = "2"
dashmap                     = "6"
uuid                        = { version = "1", features = ["v4"] }
metrics                     = "0.24"
metrics-exporter-prometheus = "0.18"
prost                       = "0.14"
serde                       = { version = "1", features = ["derive"] }
sha2                        = "0.11"
serde_json                  = "1"
toml                        = "1.1"
tokio                       = { version = "1", features = ["full"] }
tokio-util                  = { version = "0.7", features = ["rt"] }
tonic                       = { version = "0.14", features = ["transport"] }
tracing                     = "0.1"
tracing-subscriber          = { version = "0.3", features = ["json", "env-filter"] }
which                       = "8"

[target.'cfg(target_os = "linux")'.dependencies]
aa-ebpf = { path = "../aa-ebpf" }
libc    = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
