[package]
name = "aa-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tokio async runtime wrapper and lifecycle management for Agent Assembly"

[features]
default = []
# Enables integration tests that exercise both proxy and eBPF layers together.
# Requires Linux + root (CAP_BPF + CAP_PERFMON). Not included in default features.
# Usage: sudo cargo test -p aa-runtime --features integration-test --test layer_integration
integration-test = []

[dependencies]
aa-core                     = { path = "../aa-core", version = "0.0.1-alpha.5", features = ["serde"] }
aa-proto                    = { path = "../aa-proto", version = "0.0.1-alpha.5" }
aa-storage-sqlite-buffer    = { path = "../aa-storage-sqlite-buffer", version = "0.0.1-alpha.5" }
async-nats                  = "0.49"
async-trait                 = "0.1"
axum                        = "0.8"
bitflags                    = "2"
bytes                       = "1"
dashmap                     = "6"
uuid                        = { version = "1", features = ["v4"] }
metrics                     = "0.24"
metrics-exporter-prometheus = "0.18"
prost                       = "0.14"
serde                       = { version = "1", features = ["derive"] }
sha2                        = "0.11"
serde_json                  = "1"
toml                        = "1.1"
tokio                       = { version = "1", features = ["full"] }
tokio-stream                = "0.1"
tokio-util                  = { version = "0.7", features = ["rt"] }
tonic                       = { version = "0.14", features = ["transport"] }
tracing                     = "0.1"
tracing-subscriber          = { version = "0.3", features = ["json", "env-filter"] }
which                       = "8"

[target.'cfg(target_os = "linux")'.dependencies]
aa-ebpf = { path = "../aa-ebpf", version = "0.0.1-alpha.5" }
libc    = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
tower = { version = "0.5", features = ["util"] }
# Captures emitted metric values so the audit-publisher metric tests can assert
# the exact counter values recorded by `metrics::counter!`.
metrics-util = { version = "0.20", features = ["debugging"] }

[lints]
workspace = true
