[package]
name = "aa-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tokio async runtime wrapper and lifecycle management for Agent Assembly"

[features]
default = []
# Enables integration tests that exercise both proxy and eBPF layers together.
# Requires Linux + root (CAP_BPF + CAP_PERFMON). Not included in default features.
# Usage: sudo cargo test -p aa-runtime --features integration-test --test layer_integration
integration-test = []

[dependencies]
aa-core                     = { path = "../aa-core", version = "0.0.1-rc.3", features = ["serde"] }
aa-security                 = { path = "../aa-security", version = "0.0.1-rc.3", features = ["serde"] }
aa-proto                    = { path = "../aa-proto", version = "0.0.1-rc.3" }
aa-storage-sqlite-buffer    = { path = "../aa-storage-sqlite-buffer", version = "0.0.1-rc.3" }
async-nats                  = { workspace = true }
async-trait                 = { workspace = true }
axum                        = { workspace = true }
bitflags                    = "2"
bytes                       = { workspace = true }
dashmap                     = { workspace = true }
# IPC handshake: verify the SDK's Ed25519 proof of key possession (AAASM-3585).
ed25519-dalek               = "3"
hex                         = { workspace = true }
uuid                        = { workspace = true, features = ["v4"] }
metrics                     = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
prost                       = { workspace = true }
# Value-returning CSPRNG for the 32-byte per-session handshake nonce (AAASM-3585);
# `rand::random` sources from a ChaCha-based, OS-seeded thread RNG and returns the
# bytes directly, so no zero-initialized buffer literal enters the nonce data-flow.
rand                        = "0.10"
serde                       = { workspace = true }
sha2                        = { workspace = true }
serde_json                  = { workspace = true }
toml                        = { workspace = true }
tokio                       = { workspace = true, features = ["full"] }
tokio-stream                = { workspace = true }
tokio-util                  = { workspace = true, features = ["rt"] }
tonic                       = { workspace = true }
tracing                     = { workspace = true }
tracing-subscriber          = { workspace = true, features = ["json", "env-filter"] }
which                       = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
aa-ebpf = { path = "../aa-ebpf", version = "0.0.1-rc.3" }

# Peer-credential (geteuid) check on the IPC socket — all Unix targets
# (AAASM-3579). Backed by getpeereid/SO_PEERCRED via tokio's peer_cred.
[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

# Linux-only dev dep: the AAASM-3128 regression test constructs a
# `TlsCaptureEvent` to prove the DEBUG log never emits its plaintext payload.
[target.'cfg(target_os = "linux")'.dev-dependencies]
aa-ebpf-common = { path = "../aa-ebpf-common", version = "0.0.1-rc.3", features = ["std"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
# `net` (TcpListenerStream) lets the invalidation-dispatch test stand up an
# in-process mock gateway InvalidationService over loopback (AAASM-3805).
tokio-stream = { workspace = true, features = ["net"] }
tower = { workspace = true }
# Captures emitted metric values so the audit-publisher metric tests can assert
# the exact counter values recorded by `metrics::counter!`.
metrics-util = { workspace = true, features = ["debugging"] }
# Real NATS server for the audit-publisher reconnect integration test. Requires
# Docker; re-exports the `testcontainers` core runner.
testcontainers-modules = { workspace = true, features = ["nats"] }

[lints]
workspace = true
