[package]
name = "aa-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly/WASI sandbox runtime for Agent Assembly tool execution"

[dependencies]
aa-core       = { path = "../aa-core", version = "0.0.1-beta.1" }
thiserror     = { workspace = true }
wasmtime      = "45"
wasmtime-wasi = "45"

[dev-dependencies]
wat = { workspace = true }

[lints]
workspace = true
