[package]
name = "aa-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly/WASI sandbox runtime for Agent Assembly tool execution"

[dependencies]
aa-core       = { path = "../aa-core", version = "0.0.1-rc.2" }
thiserror     = { workspace = true }
wasmtime      = "46"
wasmtime-wasi = "46"

[dev-dependencies]
tempfile = { workspace = true }
wat = { workspace = true }

[lints]
workspace = true
