[package]
name = "aa-storage-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "In-memory aa-storage driver (DashMap-backed) for tests and local development"

[dependencies]
aa-core = { path = "../aa-core", version = "0.0.1-rc.5" }
aa-storage = { path = "../aa-storage", version = "0.0.1-rc.5" }
async-trait = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
# `toml` (same pin as `aa-storage`) backs the driver-factory signatures,
# which take the `[storage.memory]` subsection as a `toml::Value`.
toml = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
