[package]
name = "aa-storage-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PostgreSQL storage driver (L3 primary) for the Agent Assembly persistence layer"
# Held back from the v0.0.1-alpha publish set; the OSS driver ships once the
# storage-driver subsystem is feature-complete. Flip to publishable later.
publish = false

[dependencies]
aa-core    = { path = "../aa-core", version = "0.0.1-alpha.5", features = ["serde"] }
aa-storage = { path = "../aa-storage", version = "0.0.1-alpha.5" }
async-trait = "0.1"
sqlx       = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "uuid", "chrono", "json"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
uuid       = { version = "1", features = ["v4", "serde"] }
chrono     = { version = "0.4", features = ["clock", "serde"] }
thiserror  = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml  = "0.8"
testcontainers-modules = { version = "0.15", features = ["postgres"] }

[lints]
workspace = true
