[package]
name = "aa-storage-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PostgreSQL storage driver (L3 primary) for the Agent Assembly persistence layer"
# Held back from the v0.0.1-alpha publish set; the OSS driver ships once the
# storage-driver subsystem is feature-complete. Flip to publishable later.
publish = false

[dependencies]
aa-core    = { path = "../aa-core", version = "0.0.1-rc.1", features = ["serde"] }
aa-storage = { path = "../aa-storage", version = "0.0.1-rc.1" }
async-trait = { workspace = true }
sqlx       = { workspace = true, default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "uuid", "chrono", "json"] }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true, features = ["v4", "serde"] }
chrono     = { workspace = true, features = ["clock", "serde"] }
thiserror  = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml  = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres"] }

[lints]
workspace = true
